Cleanup 22.2.3 Xorg Setup. Add table which summarizes available input methods.
Sponsored by: iXsystems


git-svn-id: https://svn.freebsd.org/doc/head@43877 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -548,41 +548,201 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
     <sect2>
       <title>Xorg Setup</title>
 
-      <para>Although <application>Xorg</application> is not installed
-	with &os;, it can be installed from the Ports Collection.
-	Refer to <xref linkend="x11"/> for more information on
-	how to do this.  This section discusses how to localize
-	<application>Xorg</application> once it is installed.</para>
-
-      <para>Application specific <acronym>i18n</acronym> settings such
+      <para><xref linkend="x11"/> describes how to install and
+	configure <application>Xorg</application>.  When configuring
+	<application>Xorg</application> for localization, additional
+	fonts and input methods are available from the &os; Ports
+	Collection.  Application specific <acronym>i18n</acronym> settings such
 	as fonts and menus can be tuned in
-	<filename>~/.Xresources</filename>.</para>
-
-      <sect3>
-	<title>Displaying Fonts</title>
-
-	<indexterm><primary>Xorg True Type font
-	    server</primary></indexterm>
-	<para>After installing
-	  <package>x11-servers/xorg-server</package>,
-	  install the language's &truetype; fonts.  Setting the
-	  correct locale should allow users to view their selected
+	<filename>~/.Xresources</filename> and
+	should allow users to view their selected
 	  language in graphical application menus.</para>
-      </sect3>
-
-      <sect3>
-	<title>Inputting Non-English Characters</title>
 
 	<indexterm><primary>X Input Method
 	    (XIM)</primary></indexterm>
 
 	<para>The X Input Method (<acronym>XIM</acronym>) protocol
-	  is an input standard for <application>Xorg</application>
-	  clients.  All <application>Xorg</application> applications
-	  should be written as XIM clients that take input from XIM
-	  input servers.  There are several XIM servers available for
-	  different languages.</para>
-      </sect3>
+	  is an <application>Xorg</application> standard for 
+	  inputting non-English characters.  <xref
+	  linkend="locale-xim"/> summarizes the input method applications which are
+	  available in the &os; Ports Collection.  Additional Fcitx
+	  and Uim applications are also available.</para>
+	  
+      <table xml:id="locale-xim" frame="none" pgwide="1">
+	<title>Available Input Methods</title>
+
+	<tgroup cols="2">
+	  <thead>
+	    <row>
+	      <entry>Language</entry>
+	      <entry>Input Method</entry>
+	    </row>
+	  </thead>
+
+	  <tbody>
+
+	    <row>
+	      <entry>Chinese</entry>
+	      <entry><package>chinese/gcin</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Chinese</entry>
+	      <entry><package>chinese/ibus-chewing</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Chinese</entry>
+	      <entry><package>chinese/ibus-pinyin</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Chinese</entry>
+	      <entry><package>chinese/oxim</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Chinese</entry>
+	      <entry><package>chinese/scim-fcitx</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Chinese</entry>
+	      <entry><package>chinese/scim-pinyin</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Chinese</entry>
+	      <entry><package>chinese/scim-tables</package></entry>
+	    </row>
+    
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/ibus-anthy</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/ibus-mozc</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/ibus-skk</package></entry>
+	    </row>  
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/im-ja</package></entry>
+	    </row> 
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/kinput2</package></entry>
+	    </row> 
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-anthy</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-canna</package></entry>
+	    </row>  
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-honoka</package></entry>
+	    </row>  
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-honoka-plugin-romkan</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-honoka-plugin-wnn</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-prime</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-skk</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-tables</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-tomoe</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/scim-uim</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/skkinput</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/skkinput3</package></entry>
+	    </row> 
+    
+	    <row>
+	      <entry>Japanese</entry>
+	      <entry><package>japanese/uim-anthy</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Korean</entry>
+	      <entry><package>korean/ibus-hangul</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Korean</entry>
+	      <entry><package>korean/imhangul</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Korean</entry>
+	      <entry><package>korean/nabi</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Korean</entry>
+	      <entry><package>korean/scim-hangul</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Korean</entry>
+	      <entry><package>korean/scim-tables</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Vietnamese</entry>
+	      <entry><package>vietnamese/xvnkb</package></entry>
+	    </row>
+
+	    <row>
+	      <entry>Vietnamese</entry>
+	      <entry><package>vietnamese/x-unikey</package></entry>
+	    </row>
+	  </tbody>
+	</tgroup>
+      </table>
     </sect2>
 
     <sect2>
