White space fix only. Translators can ignore.
Sponsored by: iXsystems


git-svn-id: https://svn.freebsd.org/doc/head@43878 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -376,14 +376,13 @@ me:\
     <sect2 xml:id="setting-console">
       <title>Console Setup</title>
 
-      <para>Several localized fonts
-	are available for the console.  To see a listing of
-	available fonts, type
+      <para>Several localized fonts are available for the console.  To
+	see a listing of available fonts, type
 	<command>ls /usr/share/syscons/fonts</command>.  To configure
 	the console font, specify the
 	<replaceable>font_name</replaceable>,
-	without the <filename>.fnt</filename> suffix,
-	in <filename>/etc/rc.conf</filename>:</para>
+	without the <filename>.fnt</filename> suffix, in
+	<filename>/etc/rc.conf</filename>:</para>
 
       <programlisting>font8x16=<replaceable>font_name</replaceable>
 font8x14=<replaceable>font_name</replaceable>
@@ -391,40 +390,38 @@ font8x8=<replaceable>font_name</replaceable></programlisting>
 
       <indexterm><primary>keymap</primary></indexterm>
       <indexterm><primary>screenmap</primary></indexterm>
-      <para>The keymap and screenmap 
-	can be set by
-	adding the following to <filename>/etc/rc.conf</filename>:</para>
+      <para>The keymap and screenmap  can be set by adding the
+	following to <filename>/etc/rc.conf</filename>:</para>
 
       <programlisting>scrnmap=<replaceable>screenmap_name</replaceable>
 keymap=<replaceable>keymap_name</replaceable>
 keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 
       <para>To see the list of available screenmaps, type
-	<command>ls /usr/share/syscons/scrnmaps</command>.  Do
-	not include the <filename>.scm</filename> suffix when
-	specifying <replaceable>screenmap_name</replaceable>.  A screenmap
-	with a corresponding mapped font is usually needed as a
-	workaround for expanding bit 8 to bit 9 on a VGA adapter's
-	font character matrix so that letters are moved out of the
-	pseudographics area if the screen font uses a bit 8
-	column.</para>
+	<command>ls /usr/share/syscons/scrnmaps</command>.  Do not
+	include the <filename>.scm</filename> suffix when specifying
+	<replaceable>screenmap_name</replaceable>.  A screenmap with a
+	corresponding mapped font is usually needed as a workaround
+	for expanding bit 8 to bit 9 on a VGA adapter's font character
+	matrix so that letters are moved out of the pseudographics
+	area if the screen font uses a bit 8 column.</para>
 
       <para>To see the list of available keymaps, type
 	<filename>ls /usr/share/syscons/keymaps</filename>.  When
-	specifying the <replaceable>keymap_name</replaceable>, do not include the
-	<filename>.kbd</filename> suffix.  When uncertain as to which
-	keymap to use, &man.kbdmap.1; can be used to test keymaps
-	without rebooting.</para>
+	specifying the <replaceable>keymap_name</replaceable>, do not
+	include the <filename>.kbd</filename> suffix.  When uncertain
+	as to which keymap to use, &man.kbdmap.1; can be used to test
+	keymaps without rebooting.</para>
 
-      <para>The <literal>keychange</literal> entry is usually needed to
-	program function keys to match the selected terminal type
-	because function key sequences cannot be defined in the keymap.</para>
+      <para>The <literal>keychange</literal> entry is usually needed
+	to program function keys to match the selected terminal type
+	because function key sequences cannot be defined in the
+	keymap.</para>
 
       <para>Next, set the correct console terminal type in
 	<filename>/etc/ttys</filename> for all virtual terminal
-	entries.  <xref
-	  linkend="locale-charset"/> summarizes the available
-	terminal types.:</para>
+	entries.  <xref linkend="locale-charset"/> summarizes the
+	available terminal types.:</para>
 
       <table xml:id="locale-charset" frame="none" pgwide="1">
 	<title>Defined Terminal Types for Character Sets</title>
@@ -532,18 +529,17 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	</tgroup>
       </table>
 
-     <para>If <application>moused</application> is enabled in
+      <para>If <application>moused</application> is enabled in
 	<filename>/etc/rc.conf</filename>, additional configuration
-	may be required.
-	By default, the mouse cursor of the &man.syscons.4; driver
-	occupies the <literal>0xd0</literal>-<literal>0xd3</literal> range in the character set.  If the
-	language uses this range, move the cursor's range.  To enable
-	this workaround for &os;, add the following line to
-	<filename>/etc/rc.conf</filename>:</para>
+	may be required.  By default, the mouse cursor of the
+	&man.syscons.4; driver occupies the
+	<literal>0xd0</literal>-<literal>0xd3</literal> range in the
+	character set.  If the language uses this range, move the
+	cursor's range.  To enable this workaround for &os;, add the
+	following line to <filename>/etc/rc.conf</filename>:</para>
 
-	<programlisting>mousechar_start=3</programlisting>
-
-      </sect2>
+      <programlisting>mousechar_start=3</programlisting>
+    </sect2>
 
     <sect2>
       <title>Xorg Setup</title>
@@ -552,22 +548,21 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	configure <application>Xorg</application>.  When configuring
 	<application>Xorg</application> for localization, additional
 	fonts and input methods are available from the &os; Ports
-	Collection.  Application specific <acronym>i18n</acronym> settings such
-	as fonts and menus can be tuned in
-	<filename>~/.Xresources</filename> and
-	should allow users to view their selected
-	  language in graphical application menus.</para>
+	Collection.  Application specific <acronym>i18n</acronym>
+	settings such as fonts and menus can be tuned in
+	<filename>~/.Xresources</filename> and should allow users to
+	view their selected language in graphical application
+	menus.</para>
 
-	<indexterm><primary>X Input Method
-	    (XIM)</primary></indexterm>
+      <indexterm><primary>X Input Method (XIM)</primary></indexterm>
 
-	<para>The X Input Method (<acronym>XIM</acronym>) protocol
-	  is an <application>Xorg</application> standard for 
-	  inputting non-English characters.  <xref
-	  linkend="locale-xim"/> summarizes the input method applications which are
-	  available in the &os; Ports Collection.  Additional Fcitx
-	  and Uim applications are also available.</para>
-	  
+      <para>The X Input Method (<acronym>XIM</acronym>) protocol is an
+	<application>Xorg</application> standard for  inputting
+	non-English characters.  <xref linkend="locale-xim"/>
+	summarizes the input method applications which are available
+	in the &os; Ports Collection.  Additional Fcitx and Uim
+	applications are also available.</para>
+
       <table xml:id="locale-xim" frame="none" pgwide="1">
 	<title>Available Input Methods</title>
 
@@ -615,7 +610,7 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	      <entry>Chinese</entry>
 	      <entry><package>chinese/scim-tables</package></entry>
 	    </row>
-    
+
 	    <row>
 	      <entry>Japanese</entry>
 	      <entry><package>japanese/ibus-anthy</package></entry>
@@ -629,17 +624,17 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	    <row>
 	      <entry>Japanese</entry>
 	      <entry><package>japanese/ibus-skk</package></entry>
-	    </row>  
+	    </row>
 
 	    <row>
 	      <entry>Japanese</entry>
 	      <entry><package>japanese/im-ja</package></entry>
-	    </row> 
+	    </row>
 
 	    <row>
 	      <entry>Japanese</entry>
 	      <entry><package>japanese/kinput2</package></entry>
-	    </row> 
+	    </row>
 
 	    <row>
 	      <entry>Japanese</entry>
@@ -649,12 +644,12 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	    <row>
 	      <entry>Japanese</entry>
 	      <entry><package>japanese/scim-canna</package></entry>
-	    </row>  
+	    </row>
 
 	    <row>
 	      <entry>Japanese</entry>
 	      <entry><package>japanese/scim-honoka</package></entry>
-	    </row>  
+	    </row>
 
 	    <row>
 	      <entry>Japanese</entry>
@@ -699,8 +694,8 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	    <row>
 	      <entry>Japanese</entry>
 	      <entry><package>japanese/skkinput3</package></entry>
-	    </row> 
-    
+	    </row>
+
 	    <row>
 	      <entry>Japanese</entry>
 	      <entry><package>japanese/uim-anthy</package></entry>
