Initial pass through 22.4 Locale Configuration for Specific Languages. More commits to come.
Sponsored by: iXsystems


git-svn-id: https://svn.freebsd.org/doc/head@43879 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -739,7 +739,8 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	</tgroup>
       </table>
     </sect2>
-
+<!--
+Comment out for now. If needed, can be added as note in new Printing chapter.
     <sect2>
       <title>Printer Setup</title>
 
@@ -750,7 +751,7 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	converted to &postscript; or PDF formats using language
 	specific converters.</para>
     </sect2>
-
+    -->
     <sect2>
       <title>Kernel and File Systems</title>
 
@@ -831,7 +832,12 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
   </sect1>
 
   <sect1 xml:id="lang-setup">
-    <title>Localizing &os; to Specific Languages</title>
+    <title>Locale Configuration for Specific Languages</title>
+    
+    <para>This section provides configuration examples for localizing
+      a &os; system for the
+       Russian language. It then provides some
+	 additional resources for localizing other languages.</para>
 
     <sect2 xml:id="ru-localize">
       <info>
@@ -848,27 +854,14 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
 	<secondary>Russian</secondary>
       </indexterm>
 
-      <para>For more information about KOI8-R encoding, refer to
-	<link xlink:href="http://koi8.pp.ru/">KOI8-R References
-	  (Russian Net Character Set)</link>.</para>
-
-      <sect3>
-	<title>Locale Setup</title>
-
-	<para>To set this locale, put the following lines into each
+	<para>To set this locale for the login shell, add the following lines into each
 	  user's <filename>~/.login_conf</filename>:</para>
 
 	<programlisting>me:My Account:\
 	:charset=KOI8-R:\
 	:lang=ru_RU.KOI8-R:</programlisting>
-      </sect3>
 
-      <sect3>
-	<title>Console Setup</title>
-
-	<itemizedlist>
-	  <listitem>
-	    <para>Add the following lines to
+	    <para>To configure the console, add the following lines to
 	      <filename>/etc/rc.conf</filename>:</para>
 
 	    <programlisting>keymap="ru.koi8-r"
@@ -877,78 +870,49 @@ font8x16="cp866b-8x16"
 font8x14="cp866-8x14"
 font8x8="cp866-8x8"
 mousechar_start=3</programlisting>
-	  </listitem>
 
-	  <listitem>
 	    <para>For each <literal>ttyv</literal> entry in
 	      <filename>/etc/ttys</filename>, use
 	      <literal>cons25r</literal> as the terminal type.</para>
-	  </listitem>
-	</itemizedlist>
-      </sect3>
-
-      <sect3>
-	<title>Printer Setup</title>
 
 	<indexterm><primary>printers</primary></indexterm>
-	<para>Since most printers with Russian characters come with
-	  hardware code page CP866, a special output filter is needed
-	  to convert from KOI8-R to CP866.  &os; installs a default
-	  filter as <filename>/usr/libexec/lpr/ru/koi2alt</filename>.
-	  A Russian printer <filename>/etc/printcap</filename> entry
-	  should look like:</para>
+	<para>To configure printing, a special output filter is needed
+	  to convert from KOI8-R to CP866 since most printers with Russian characters come with
+	  hardware code page CP866.  &os; includes a default
+	  filter for this purpose, <filename>/usr/libexec/lpr/ru/koi2alt</filename>.
+	  To use this filter, add this entry to <filename>/etc/printcap</filename>:</para>
 
 	<programlisting>lp|Russian local line printer:\
 	:sh:of=/usr/libexec/lpr/ru/koi2alt:\
 	:lp=/dev/lpt0:sd=/var/spool/output/lpd:lf=/var/log/lpd-errs:</programlisting>
 
 	<para>Refer to &man.printcap.5; for a more detailed
-	  description.</para>
-      </sect3>
+	  explanation.</para>
 
-      <sect3>
-	<title>&ms-dos; and Russian Filenames</title>
-
-	<para>The following example &man.fstab.5; entry enables
+	<para>To configure
 	  support for Russian filenames in mounted &ms-dos;
-	  filesystems:</para>
+	    file systems, include <option>-L</option> and the locale name when adding an entry to
+	    <filename>/etc/fstab</filename>:</para>
 
 	<programlisting>/dev/ad0s2      /dos/c  msdos   rw,-Lru_RU.KOI8-R 0 0</programlisting>
 
-	<para><option>-L</option> selects the locale name.  Refer to
+	<para>Refer to
 	  &man.mount.msdosfs.8; for more details.</para>
-      </sect3>
 
-      <sect3>
-	<title><application>Xorg</application> Setup</title>
 
-	<orderedlist>
-	  <listitem>
-	    <para>First, configure the
-	      <link linkend="setting-locale">non-X locale
-		setup</link>.</para>
-	  </listitem>
-
-	  <listitem>
-	    <para>When using <application>&xorg;</application>,
+	    <para>To configure Russian fonts for <application>&xorg;</application>,
 	      install the
 	      <package>x11-fonts/xorg-fonts-cyrillic</package>
-	      package.</para>
-
-	    <para>Check the <literal>"Files"</literal> section in
+	      package.  Then, check the <literal>"Files"</literal> section in
 	      <filename>/etc/X11/xorg.conf</filename>.  The
 	      following line must be added <emphasis>before</emphasis>
 	      any other <literal>FontPath</literal> entries:</para>
 
 	    <programlisting>FontPath   "/usr/local/lib/X11/fonts/cyrillic"</programlisting>
 
-	    <note>
-	      <para>Search the Ports Collection for more Cyrillic
-		fonts.</para>
-	    </note>
-	  </listitem>
+	      <para>Additional Cyrillic
+		fonts are available in the Ports Collection.</para>
 
-	  <listitem>
 	    <para>To activate a Russian keyboard, add the following
 	      to the <literal>"Keyboard"</literal> section of
 	      <filename>/etc/xorg.conf</filename>:</para>
@@ -983,10 +947,7 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 	      <para>The Russian XKB keyboard may not work with
 		non-localized applications.</para>
 	    </note>
-	  </listitem>
-	</orderedlist>
 
-	<note>
 	  <para>Minimally localized applications should call a
 	    <function>XtSetLanguageProc (NULL, NULL, NULL);</function>
 	    function early in the program.</para>
@@ -994,59 +955,29 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 	  <para>See <link xlink:href="http://koi8.pp.ru/xwin.html">
 	      KOI8-R for X Window</link> for more instructions on
 	    localizing <application>Xorg</application>
-	    applications.</para>
-	</note>
-      </sect3>
+	    applications.  For more general    
+      information about KOI8-R encoding, refer to
+	<link xlink:href="http://koi8.pp.ru/">KOI8-R -
+	  Russian Net Character Set</link>.</para>	    
     </sect2>
 
     <sect2>
-      <title>Traditional Chinese Localization for Taiwan</title>
+      <title>Additional Language-Specific Resources</title>
+      
+      <para>Some intro text here...</para>
 
       <indexterm>
 	<primary>localization</primary>
 	<secondary>Traditional Chinese</secondary>
       </indexterm>
-      <para>The &os;-Taiwan Project has a Chinese HOWTO for
-	&os; at <uri
-	  xlink:href="http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/">http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/</uri>
-	using many Chinese ports.  The current editor for the
-	<literal>&os; Chinese HOWTO</literal> is Shen Chuan-Hsing
-	<email>statue@freebsd.sinica.edu.tw</email>.</para>
-    </sect2>
-
-    <sect2>
-      <title>German Language Localization for All ISO 8859-1
-	Languages</title>
-
-      <indexterm>
+       <indexterm>
 	<primary>localization</primary>
 	<secondary>German</secondary>
-      </indexterm>
-
-      <para>Slaven Rezic <email>eserte@cs.tu-berlin.de</email> wrote a
-	tutorial on using umlauts on &os;.  The tutorial
-	is written in German and is available at <uri
-	  xlink:href="http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html">http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html</uri>.</para>
-    </sect2>
-
-    <sect2>
-      <title>Greek Language Localization</title>
-
-      <indexterm>
+      </indexterm> 
+       <indexterm>
 	<primary>localization</primary>
 	<secondary>Greek</secondary>
-      </indexterm>
-      <para>Nikos Kokkalis <email>nickkokkalis@gmail.com</email> has
-	written a complete article on Greek support in &os;.  It is
-	available <link
-	  xlink:href="&url.doc.base;/el_GR.ISO8859-7/articles/greek-language-support/index.html">here</link>,
-	in Greek only, as part of the official &os; Greek
-	documentation.</para>
-    </sect2>
-
-    <sect2>
-      <title>Japanese and Korean Language Localization</title>
-
+      </indexterm> 
       <indexterm>
 	<primary>localization</primary>
 	<secondary>Japanese</secondary>
@@ -1055,20 +986,69 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 	<primary>localization</primary>
 	<secondary>Korean</secondary>
       </indexterm>
+      
+      <variablelist>
+      <varlistentry>
+	<term>Traditional Chinese for Taiwan</term>
+
+	<listitem>
+      <para>The &os;-Taiwan Project has a Chinese HOWTO for
+	&os; at <uri
+	  xlink:href="http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/">http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/</uri>
+	using many Chinese ports.  The current editor for the
+	<literal>&os; Chinese HOWTO</literal> is Shen Chuan-Hsing
+	<email>statue@freebsd.sinica.edu.tw</email>.</para>
+      </listitem>
+    </varlistentry>
+  
+ <varlistentry>
+      <term>German Language Localization for All ISO 8859-1
+	Languages</term>
+
+      <listitem>
+      <para>Slaven Rezic <email>eserte@cs.tu-berlin.de</email> wrote a
+	tutorial on using umlauts on &os;.  The tutorial
+	is written in German and is available at <uri
+	  xlink:href="http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html">http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html</uri>.</para>
+	</listitem>
+      </varlistentry>
+    
+ <varlistentry>
+      <term>Greek Language Localization</term>
+
+      <listitem>
+      <para>Nikos Kokkalis <email>nickkokkalis@gmail.com</email> has
+	written a complete article on Greek support in &os;.  It is
+	available <link
+	  xlink:href="&url.doc.base;/el_GR.ISO8859-7/articles/greek-language-support/index.html">here</link>,
+	in Greek only, as part of the official &os; Greek
+	documentation.</para>
+      </listitem>
+    </varlistentry>
+
+    <varlistentry>
+      <term>Japanese and Korean Language Localization</term>
+
+      <listitem>
       <para>For Japanese, refer to <uri
 	  xlink:href="http://www.jp.FreeBSD.org/">http://www.jp.FreeBSD.org/</uri>,
 	and for Korean, refer to <uri
 	  xlink:href="http://www.kr.FreeBSD.org/">http://www.kr.FreeBSD.org/</uri>.</para>
-    </sect2>
+	</listitem>
+    </varlistentry>
 
-    <sect2>
-      <title>Non-English &os; Documentation</title>
+    <varlistentry>
+      <term>Non-English &os; Documentation</term>
 
+ <listitem>
       <para>Some &os; contributors have translated parts of the
 	&os; documentation to other languages.  They are available
 	through links on the <link
 	  xlink:href="&url.base;/index.html">main site</link> or in
 	<filename>/usr/share/doc</filename>.</para>
+      </listitem>
+    </varlistentry>
+  </variablelist>
     </sect2>
   </sect1>
 </chapter>
