--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -833,11 +833,10 @@ Comment out for now. If needed, can be added as note in new Printing chapter.
 
   <sect1 xml:id="lang-setup">
     <title>Locale Configuration for Specific Languages</title>
-    
+
     <para>This section provides configuration examples for localizing
-      a &os; system for the
-       Russian language. It then provides some
-	 additional resources for localizing other languages.</para>
+      a &os; system for the Russian language.  It then provides some
+      additional resources for localizing other languages.</para>
 
     <sect2 xml:id="ru-localize">
       <info>
@@ -854,130 +853,129 @@ Comment out for now. If needed, can be added as note in new Printing chapter.
 	<secondary>Russian</secondary>
       </indexterm>
 
-	<para>To set this locale for the login shell, add the following lines into each
-	  user's <filename>~/.login_conf</filename>:</para>
+      <para>To set this locale for the login shell, add the following
+	lines into each user's
+	<filename>~/.login_conf</filename>:</para>
 
-	<programlisting>me:My Account:\
+      <programlisting>me:My Account:\
 	:charset=KOI8-R:\
 	:lang=ru_RU.KOI8-R:</programlisting>
 
-	    <para>To configure the console, add the following lines to
-	      <filename>/etc/rc.conf</filename>:</para>
+      <para>To configure the console, add the following lines to
+	<filename>/etc/rc.conf</filename>:</para>
 
-	    <programlisting>keymap="ru.koi8-r"
+      <programlisting>keymap="ru.koi8-r"
 scrnmap="koi8-r2cp866"
 font8x16="cp866b-8x16"
 font8x14="cp866-8x14"
 font8x8="cp866-8x8"
 mousechar_start=3</programlisting>
 
-	    <para>For each <literal>ttyv</literal> entry in
-	      <filename>/etc/ttys</filename>, use
-	      <literal>cons25r</literal> as the terminal type.</para>
+      <para>For each <literal>ttyv</literal> entry in
+	<filename>/etc/ttys</filename>, use
+	<literal>cons25r</literal> as the terminal type.</para>
 
-	<indexterm><primary>printers</primary></indexterm>
-	<para>To configure printing, a special output filter is needed
-	  to convert from KOI8-R to CP866 since most printers with Russian characters come with
-	  hardware code page CP866.  &os; includes a default
-	  filter for this purpose, <filename>/usr/libexec/lpr/ru/koi2alt</filename>.
-	  To use this filter, add this entry to <filename>/etc/printcap</filename>:</para>
+      <indexterm><primary>printers</primary></indexterm>
+      <para>To configure printing, a special output filter is needed
+	to convert from KOI8-R to CP866 since most printers with
+	Russian characters come with hardware code page CP866.  &os;
+	includes a default filter for this purpose,
+	<filename>/usr/libexec/lpr/ru/koi2alt</filename>.  To use this
+	filter, add this entry to
+	<filename>/etc/printcap</filename>:</para>
 
-	<programlisting>lp|Russian local line printer:\
+      <programlisting>lp|Russian local line printer:\
 	:sh:of=/usr/libexec/lpr/ru/koi2alt:\
 	:lp=/dev/lpt0:sd=/var/spool/output/lpd:lf=/var/log/lpd-errs:</programlisting>
 
-	<para>Refer to &man.printcap.5; for a more detailed
-	  explanation.</para>
+      <para>Refer to &man.printcap.5; for a more detailed
+	explanation.</para>
 
-	<para>To configure
-	  support for Russian filenames in mounted &ms-dos;
-	    file systems, include <option>-L</option> and the locale name when adding an entry to
-	    <filename>/etc/fstab</filename>:</para>
+      <para>To configure support for Russian filenames in mounted
+	&ms-dos; file systems, include <option>-L</option> and the
+	locale name when adding an entry to
+	<filename>/etc/fstab</filename>:</para>
 
-	<programlisting>/dev/ad0s2      /dos/c  msdos   rw,-Lru_RU.KOI8-R 0 0</programlisting>
+     <programlisting>/dev/ad0s2      /dos/c  msdos   rw,-Lru_RU.KOI8-R 0 0</programlisting>
 
-	<para>Refer to
-	  &man.mount.msdosfs.8; for more details.</para>
+      <para>Refer to &man.mount.msdosfs.8; for more details.</para>
 
+      <para>To configure Russian fonts for
+	<application>&xorg;</application>, install the
+	<package>x11-fonts/xorg-fonts-cyrillic</package> package.
+	Then, check the <literal>"Files"</literal> section in
+	<filename>/etc/X11/xorg.conf</filename>.  The following line
+	must be added <emphasis>before</emphasis> any other
+	<literal>FontPath</literal> entries:</para>
 
-	    <para>To configure Russian fonts for <application>&xorg;</application>,
-	      install the
-	      <package>x11-fonts/xorg-fonts-cyrillic</package>
-	      package.  Then, check the <literal>"Files"</literal> section in
-	      <filename>/etc/X11/xorg.conf</filename>.  The
-	      following line must be added <emphasis>before</emphasis>
-	      any other <literal>FontPath</literal> entries:</para>
+      <programlisting>FontPath   "/usr/local/lib/X11/fonts/cyrillic"</programlisting>
 
-	    <programlisting>FontPath   "/usr/local/lib/X11/fonts/cyrillic"</programlisting>
+      <para>Additional Cyrillic fonts are available in the Ports
+	Collection.</para>
 
-	      <para>Additional Cyrillic
-		fonts are available in the Ports Collection.</para>
+      <para>To activate a Russian keyboard, add the following to the
+	<literal>"Keyboard"</literal> section of
+	<filename>/etc/xorg.conf</filename>:</para>
 
-	    <para>To activate a Russian keyboard, add the following
-	      to the <literal>"Keyboard"</literal> section of
-	      <filename>/etc/xorg.conf</filename>:</para>
-
-	    <programlisting>Option "XkbLayout"   "us,ru"
+      <programlisting>Option "XkbLayout"   "us,ru"
 Option "XkbOptions"  "grp:toggle"</programlisting>
 
-	    <para>Make sure that <literal>XkbDisable</literal> is
-	      commented out in that file.</para>
+      <para>Make sure that <literal>XkbDisable</literal> is
+	commented out in that file.</para>
 
-	    <para>For <literal>grp:toggle</literal> use
-	      <keycap>Right Alt</keycap>, for
-	      <literal>grp:ctrl_shift_toggle</literal> use <keycombo
-		action="simul"><keycap>Ctrl</keycap><keycap>Shift</keycap></keycombo>.
-	      For <literal>grp:caps_toggle</literal> use
-	      <keycap>CapsLock</keycap>.  The old
-	      <keycap>CapsLock</keycap> function is still available
-	      in LAT mode only using <keycombo
-		action="simul"><keycap>Shift</keycap><keycap>CapsLock</keycap></keycombo>.
-	      <literal>grp:caps_toggle</literal>
-	      does not work in <application>&xorg;</application> for
-	      some unknown reason.</para>
+      <para>For <literal>grp:toggle</literal> use
+	<keycap>Right Alt</keycap>, for
+	<literal>grp:ctrl_shift_toggle</literal> use <keycombo
+	  action="simul"><keycap>Ctrl</keycap><keycap>Shift</keycap></keycombo>.
+	For <literal>grp:caps_toggle</literal> use
+	<keycap>CapsLock</keycap>.  The old
+	<keycap>CapsLock</keycap> function is still available in LAT
+	mode only using <keycombo
+	  action="simul"><keycap>Shift</keycap><keycap>CapsLock</keycap></keycombo>.
+	<literal>grp:caps_toggle</literal> does not work in
+	<application>&xorg;</application> for some unknown
+	reason.</para>
 
-	    <para>If the keyboard has <quote>&windows;</quote> keys,
-	      and some non-alphabetical keys are mapped incorrectly,
-	      add the following line to
-	      <filename>/etc/xorg.conf</filename>:</para>
+      <para>If the keyboard has <quote>&windows;</quote> keys, and
+	some non-alphabetical keys are mapped incorrectly, add the
+	following line to <filename>/etc/xorg.conf</filename>:</para>
 
-	    <programlisting>Option "XkbVariant" ",winkeys"</programlisting>
+      <programlisting>Option "XkbVariant" ",winkeys"</programlisting>
 
-	    <note>
-	      <para>The Russian XKB keyboard may not work with
-		non-localized applications.</para>
-	    </note>
+      <note>
+	<para>The Russian XKB keyboard may not work with
+	  non-localized applications.</para>
+      </note>
 
-	  <para>Minimally localized applications should call a
-	    <function>XtSetLanguageProc (NULL, NULL, NULL);</function>
-	    function early in the program.</para>
+      <para>Minimally localized applications should call a
+	<function>XtSetLanguageProc (NULL, NULL, NULL);</function>
+	function early in the program.</para>
 
-	  <para>See <link xlink:href="http://koi8.pp.ru/xwin.html">
-	      KOI8-R for X Window</link> for more instructions on
-	    localizing <application>Xorg</application>
-	    applications.  For more general    
-      information about KOI8-R encoding, refer to
+      <para>See <link xlink:href="http://koi8.pp.ru/xwin.html">
+	  KOI8-R for X Window</link> for more instructions on
+	localizing <application>Xorg</application> applications.  For
+	more general information about KOI8-R encoding, refer to
 	<link xlink:href="http://koi8.pp.ru/">KOI8-R -
-	  Russian Net Character Set</link>.</para>	    
+	  Russian Net Character Set</link>.</para>
     </sect2>
 
     <sect2>
       <title>Additional Language-Specific Resources</title>
-      
+
       <para>Some intro text here...</para>
 
       <indexterm>
 	<primary>localization</primary>
 	<secondary>Traditional Chinese</secondary>
       </indexterm>
-       <indexterm>
+      <indexterm>
 	<primary>localization</primary>
 	<secondary>German</secondary>
-      </indexterm> 
-       <indexterm>
+      </indexterm>
+      <indexterm>
 	<primary>localization</primary>
 	<secondary>Greek</secondary>
-      </indexterm> 
+      </indexterm>
       <indexterm>
 	<primary>localization</primary>
 	<secondary>Japanese</secondary>
@@ -986,69 +984,70 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 	<primary>localization</primary>
 	<secondary>Korean</secondary>
       </indexterm>
-      
+
       <variablelist>
-      <varlistentry>
-	<term>Traditional Chinese for Taiwan</term>
+	<varlistentry>
+	  <term>Traditional Chinese for Taiwan</term>
 
-	<listitem>
-      <para>The &os;-Taiwan Project has a Chinese HOWTO for
-	&os; at <uri
-	  xlink:href="http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/">http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/</uri>
-	using many Chinese ports.  The current editor for the
-	<literal>&os; Chinese HOWTO</literal> is Shen Chuan-Hsing
-	<email>statue@freebsd.sinica.edu.tw</email>.</para>
-      </listitem>
-    </varlistentry>
-  
- <varlistentry>
-      <term>German Language Localization for All ISO 8859-1
-	Languages</term>
+	  <listitem>
+	    <para>The &os;-Taiwan Project has a Chinese HOWTO for &os;
+	      at <uri
+		xlink:href="http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/">http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/</uri>
+	      using many Chinese ports.  The current editor for the
+	      <literal>&os; Chinese HOWTO</literal> is Shen
+	      Chuan-Hsing
+	      <email>statue@freebsd.sinica.edu.tw</email>.</para>
+	  </listitem>
+	</varlistentry>
 
-      <listitem>
-      <para>Slaven Rezic <email>eserte@cs.tu-berlin.de</email> wrote a
-	tutorial on using umlauts on &os;.  The tutorial
-	is written in German and is available at <uri
-	  xlink:href="http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html">http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html</uri>.</para>
-	</listitem>
-      </varlistentry>
-    
- <varlistentry>
-      <term>Greek Language Localization</term>
+	<varlistentry>
+	  <term>German Language Localization for All ISO 8859-1
+	    Languages</term>
 
-      <listitem>
-      <para>Nikos Kokkalis <email>nickkokkalis@gmail.com</email> has
-	written a complete article on Greek support in &os;.  It is
-	available <link
-	  xlink:href="&url.doc.base;/el_GR.ISO8859-7/articles/greek-language-support/index.html">here</link>,
-	in Greek only, as part of the official &os; Greek
-	documentation.</para>
-      </listitem>
-    </varlistentry>
+	  <listitem>
+	    <para>Slaven <email>eserte@cs.tu-berlin.de</email> wrote a
+	      tutorial on using umlauts on &os;.  The tutorial is
+	      written in German and is available at <uri
+		xlink:href="http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html">http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html</uri>.</para>
+	  </listitem>
+	</varlistentry>
 
-    <varlistentry>
-      <term>Japanese and Korean Language Localization</term>
+	<varlistentry>
+	  <term>Greek Language Localization</term>
 
-      <listitem>
-      <para>For Japanese, refer to <uri
-	  xlink:href="http://www.jp.FreeBSD.org/">http://www.jp.FreeBSD.org/</uri>,
-	and for Korean, refer to <uri
-	  xlink:href="http://www.kr.FreeBSD.org/">http://www.kr.FreeBSD.org/</uri>.</para>
-	</listitem>
-    </varlistentry>
+	  <listitem>
+	    <para>Nikos Kokkalis <email>nickkokkalis@gmail.com</email>
+	      has written a complete article on Greek support in &os;.
+	      It is available <link
+		xlink:href="&url.doc.base;/el_GR.ISO8859-7/articles/greek-language-support/index.html">here</link>,
+	      in Greek only, as part of the official &os; Greek
+	      documentation.</para>
+	  </listitem>
+	</varlistentry>
 
-    <varlistentry>
-      <term>Non-English &os; Documentation</term>
+	<varlistentry>
+	  <term>Japanese and Korean Language Localization</term>
 
- <listitem>
-      <para>Some &os; contributors have translated parts of the
-	&os; documentation to other languages.  They are available
-	through links on the <link
-	  xlink:href="&url.base;/index.html">main site</link> or in
-	<filename>/usr/share/doc</filename>.</para>
-      </listitem>
-    </varlistentry>
-  </variablelist>
+	  <listitem>
+	    <para>For Japanese, refer to <uri
+		xlink:href="http://www.jp.FreeBSD.org/">http://www.jp.FreeBSD.org/</uri>,
+	      and for Korean, refer to <uri
+		xlink:href="http://www.kr.FreeBSD.org/">http://www.kr.FreeBSD.org/</uri>.</para>
+	  </listitem>
+	</varlistentry>
+
+	<varlistentry>
+	  <term>Non-English &os; Documentation</term>
+
+	  <listitem>
+	    <para>Some &os; contributors have translated parts of the
+	      &os; documentation to other languages.  They are
+	      available through links on the <link
+		link:href="&url.base;/index.html">main site</link> or
+	      in <filename>/usr/share/doc</filename>.</para>
+	  </listitem>
+	</varlistentry>
+      </variablelist>
     </sect2>
   </sect1>
 </chapter>
