--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -1043,7 +1043,7 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 	    <para>Some &os; contributors have translated parts of the
 	      &os; documentation to other languages.  They are
 	      available through links on the <link
-		link:href="&url.base;/index.html">main site</link> or
+		xlink:href="&url.base;/index.html">main site</link> or
 	      in <filename>/usr/share/doc</filename>.</para>
 	  </listitem>
 	</varlistentry>
